# wasm-server-runner

./: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  flake.nix  rustfmt.toml
.github/workflows/: release-binary.yaml
example-project/: Cargo.toml
example-project/.cargo/: config.toml
example-project/examples/: example.rs  snippets.rs
example-project/examples/snippets/: snippet.js
example-project/src/: main.rs
src/: main.rs  server.rs  wasm_bindgen.rs
src/server/: certificate.rs
static/: index.html  index_no_module.html
