[package]
name = "wasm-server-runner"
version = "1.0.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/jakobhellermann/wasm-server-runner/"
license = "MIT"
keywords = ["web", "wasm", "devtools"]
categories = ["command-line-utilities", "development-tools", "development-tools::cargo-plugins", "wasm", "web-programming"]
description = "cargo run for wasm programs"

[dependencies]
wasm-bindgen-cli-support = "0.2"
anyhow = "1.0"

tokio = { version = "1.11", default-features = false, features = ["rt-multi-thread"] }
axum = { version = "0.8", default-features = false, features = ["http1", "ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
axum-server-dual-protocol = "0.7"
tower-http = { version = "0.6", features = ["compression-full", "fs", "set-header", "trace"] }
tower = "0.5"
http = "1.0"
rcgen = { version = "0.14", default-features = false, features = ["aws_lc_rs"] }

tracing = { version = "0.1", default-features = false, features = ["release_max_level_debug"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

directories = "6"
fastrand = "2.0"
